[gd_scene load_steps=5 format=3 uid="uid://c4hi6wdaq3p7q"]

[ext_resource type="Script" uid="uid://jsi55a4iny7p" path="res://Player/Attack/javalin.gd" id="1_cxr18"]
[ext_resource type="Texture2D" uid="uid://bamttt0nlmjfk" path="res://Texture/Items/Weapons/javelin_3_new.png" id="1_hkgrk"]
[ext_resource type="AudioStream" uid="uid://bmfox2brsxpkf" path="res://Audio/SoundEffect/woosh.wav" id="3_milig"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cxr18"]
size = Vector2(2.82843, 33.9411)

[node name="Javalin" type="Area2D" groups=["attack"]]
top_level = true
collision_layer = 4
collision_mask = 0
script = ExtResource("1_cxr18")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_hkgrk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -0.785398
shape = SubResource("RectangleShape2D_cxr18")
disabled = true

[node name="AttackTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 4.0
one_shot = true
autostart = true

[node name="ChangeDirection" type="Timer" parent="."]
unique_name_in_owner = true

[node name="ResetPosTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
autostart = true

[node name="snd_attack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_milig")

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="ChangeDirection" to="." method="_on_change_direction_timeout"]
[connection signal="timeout" from="ResetPosTimer" to="." method="_on_reset_pos_timer_timeout"]
